Use Java 8 compatible file reads in integration tests